# kamu-molecule-bridge

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPER.md  README.md  clippy.toml  config.yaml.example  deny.toml  index.yaml
.github/workflows/: build.yaml  release-chart.yaml  release-images.yaml  release.yaml
charts/kamu-molecule-bridge/: Chart.yaml
federation/: .gitignore  README.md  docker-compose.yml
federation/supergraph/: config.yaml
images/kamu-molecule-bridge/: Dockerfile  Makefile
src/app/bridge/: Cargo.toml  build.rs
src/app/bridge/examples/: ocl.env.example  ocl.rs
src/app/bridge/examples/abi/: LabNFT.json
src/app/bridge/src/: app.rs  cli.rs  config.rs  graphql.rs  http_server.rs  lib.rs  main.rs  metrics.rs  prelude.rs
src/app/bridge/src/graphql/: external_types.rs  handlers.rs  mod.rs  prelude.rs  query.rs  root.rs  schema.rs  types.rs
src/app/bridge/src/graphql/queries/: molecule.rs
src/app/bridge/src/graphql/scalars/: big_int.rs  mod.rs  u256.rs
src/domain/kamu_node_api_client/: Cargo.toml  build.rs
src/domain/kamu_node_api_client/gql/: apply_account_dataset_relations.graphql  availability_of_datasets.graphql  create_wallet_accounts.graphql  molecule_projects_view.graphql  schema.graphql  sql_query.graphql
src/domain/kamu_node_api_client/src/: did_phk.rs  kamu_node_api_client.rs  kamu_node_api_client_impl.rs  lib.rs
src/domain/kamu_node_api_client/tests/: lib.rs  test_did_phk.rs
src/domain/molecule_ipnft/: Cargo.toml
src/domain/molecule_ipnft/src/: lib.rs
src/domain/molecule_ipnft/src/entities/: ipnft_event.rs  ipnft_uid.rs  ipt_event.rs  mod.rs  tokenizer_event.rs
src/domain/molecule_ipnft/src/strategies/: ipnft_event_processing_strategy.rs  mod.rs  tokenizer_event_processing_strategy.rs
src/domain/molecule_ipnft/tests/: lib.rs  test_ipnft_event_processing_strategy.rs  test_ipnft_uid.rs
src/domain/molecule_ocl/: Cargo.toml
src/domain/molecule_ocl/src/entities/: mod.rs  ocl_event.rs  ocl_id.rs  ocl_ownership_change.rs  ocl_ownership_projection.rs  ocl_ownership_projection_map.rs
src/domain/molecule_ocl/tests/: test_ocl_id.rs  test_ocl_ownership_projection.rs  test_ocl_transfer_event_processing_strategy.rs
src/domain/multisig/: Cargo.toml
src/domain/multisig/src/services/: mod.rs  multisig_resolver.rs
src/infra/molecule_contracts/: Cargo.toml
src/infra/molecule_contracts/abis/: Safe.json  Safe_1.3.0.json  Safe_1.5.0.json  Synthesizer.json  Tokenizer.json
src/infra/molecule_contracts/src/: lib.rs  prelude.rs  safe_utils.rs
src/infra/multisig_safe_wallet/: Cargo.toml
src/infra/multisig_safe_wallet/src/services/: mod.rs  safe_wallet_api_service.rs
src/utils/alloy_ext/: Cargo.toml
src/utils/alloy_ext/src/: lib.rs  log_ext.rs  metrics.rs  prelude.rs  provider_ext.rs  tracing.rs
src/utils/math/: Cargo.toml
src/utils/math/src/: ranges.rs
src/utils/math/tests/: test_ranges.rs
