[workspace]
members = [
    # App
    "./src/app/bridge",
    # Domain
    "./src/domain/kamu_node_api_client",
    "./src/domain/molecule_ipnft",
    "./src/domain/multisig",
    # Infra
    "./src/infra/molecule_contracts",
    "./src/infra/multisig_safe_wallet",
    # Utils
    "./src/utils/alloy_ext",
]
resolver = "3"


[workspace.package]
version = "0.5.1"
edition = "2024"
homepage = "https://github.com/kamu-data/kamu-molecule-bridge"
repository = "https://github.com/kamu-data/kamu-molecule-bridge"
authors = ["Kamu Data Inc. <dev@kamu.dev>"]
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["blockchain"]
include = ["src/**/*.rs", "Cargo.toml"]
publish = false


[workspace.dependencies]
# App
bridge = { path = "src/app/bridge", default-features = false }
# Domain
kamu_node_api_client = { path = "src/domain/kamu_node_api_client", default-features = false }
molecule_ipnft = { path = "src/domain/molecule_ipnft", default-features = false }
multisig = { path = "src/domain/multisig", default-features = false }
# Infra
molecule_contracts = { path = "src/infra/molecule_contracts", default-features = false }
multisig_safe_wallet = { path = "src/infra/multisig_safe_wallet", default-features = false }
# Utils
alloy_ext = { path = "src/utils/alloy_ext", default-features = false }

alloy = { version = "1", default-features = false, features = [
    "std",
    "contract",
    "json-rpc",
    "network",
    "provider-http",
    "provider-ws",
    "reqwest-rustls-tls",
    "rpc-types-eth",
] }
async-graphql = { version = "7", default-features = false, features = [
    "graphiql",
    "tracing"
] }
async-graphql-axum = { version = "7", default-features = false }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "tokio",
] }
# TODO: use eyre and color-eyre only in app crate
# TODO: remove extra features
#       https://github.com/eyre-rs/eyre/tree/master/color-eyre
chrono = { version = "0.4", default-features = false, features = [
    "now",
    "serde",
] }
color-eyre = { version = "0.6" }
indoc = { version = "2", default-features = false }
mockall = { version = "0.13", default-features = false }
observability = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.245.2", version = "0.245.2", default-features = false, features = [
    "opentelemetry",
    "prometheus",
    "tracing-error",
] }
pretty_assertions = { version = "1.0", features = ["std", "unstable"] }
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls-webpki-roots",
] }
rstest = { version = "0.26" }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower = { version = "0.5", default-features = false }


[workspace.lints.clippy]
# clippy::all (clippy::сorrectness, clippy::suspicious, clippy::style, clippy::complexity, clippy::perf)
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"

# clippy::pedantic
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
wildcard_imports = "allow"


# clippy::cargo
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }


[profile.dev]
# Change this to 1 for faster builds that still preserve enough info for backtraces.
# Use 2 when you need to attach a debugger.
debug = 1


# Emit the line info tables for our crates to produce useful crash reports and backtraces.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
[profile.release]
debug = 1


[profile.ci]
inherits = "dev"
# CI builds often are closer to from-scratch builds. Incremental adds an extra
# dependency-tracking overhead and significantly increases the amount of IO and
# the size of ./target, which make caching less effective
# See: https://matklad.github.io/2021/09/04/fast-rust-builds.html#CI-Workflow
incremental = false
# Line info is enough to get good backtraces in CI - we don't need the
# full debugging symbols that are only useful when attaching a debugger.
debug = "line-tables-only"


# Use this section to test or apply emergency overrides to dependencies
# See: https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html
[patch.crates-io]
