[package]
name = "kamu-molecule-bridge"
default-run = "kamu-molecule-bridge"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
molecule_contracts = { workspace = true }

# TODO: remove extra features
alloy = { version = "1" }
# TODO: remove extra features
#       https://github.com/eyre-rs/eyre/tree/master/color-eyre
color-eyre = { version = "0.6" }
confique = { version = "0.3", default-features = false, features = ["yaml"] }
dotenv = { version = "0.15", default-features = false, features = [] }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
tracing = { version = "0.1", default-features = false, features = [] }


[dev-dependencies]


[build-dependencies]
# TODO: migrate to 9 version?
vergen = { version = "8", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
