[package]
name = "kamu-molecule-bridge"
default-run = "kamu-molecule-bridge"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
alloy_ext = { workspace = true }
kamu_node_api_client = { workspace = true }
molecule_contracts = { workspace = true }
molecule_ipnft = { workspace = true }
multisig = { workspace = true }
multisig_safe_wallet = { workspace = true }

alloy = { workspace = true }
color-eyre = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
observability = { workspace = true }

confique = { version = "0.3", default-features = false, features = ["yaml"] }
dotenv = { version = "0.15", default-features = false, features = [] }
# TODO: remove extra features
tracing-subscriber = { version = "0.3", default-features = true }


[dev-dependencies]


[build-dependencies]
# TODO: migrate to 9 version?
vergen = { version = "8", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
