[package]
name = "kamu-molecule-bridge"
default-run = "kamu-molecule-bridge"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
alloy_ext = { workspace = true }
chrono = { workspace = true }
kamu_node_api_client = { workspace = true }
molecule_contracts = { workspace = true }
molecule_ipnft = { workspace = true }
multisig = { workspace = true }
multisig_safe_wallet = { workspace = true }

alloy = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
color-eyre = { workspace = true }
prometheus = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
observability = { workspace = true }

confique = { version = "0.3", default-features = false, features = ["yaml"] }
clap = { version = "4", default-features = false, features = [
    "cargo",
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
] }
dotenv = { version = "0.15", default-features = false, features = [] }


[dev-dependencies]


[build-dependencies]
# TODO: migrate to 9 version?
vergen = { version = "8", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
