[package]
name = "kamu_node_api_client"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []
testing = ["dep:mockall"]


[dependencies]
alloy = { workspace = true }
async-trait = { workspace = true }
# TODO: use just eyre and color-eyre only in main.rs
color-eyre = { workspace = true }
indoc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

graphql_client = { version = "0.14.0", default-features = false, features = ["graphql_query_derive"] }

mockall = { optional = true, workspace = true }


[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }
