[package]
name = "kamu_node_api_client"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []
testing = ["dep:mockall"]


[dependencies]
math = { workspace = true }
molecule_ocl = { workspace = true, features = ["serde"] }

alloy = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
indoc = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

graphql_client = { version = "0.16", default-features = false, features = [
    "graphql_query_derive",
] }

# Optional
mockall = { optional = true, workspace = true }


[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }
