[package]
name = "molecule_ipnft"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
multisig = { workspace = true }

alloy = { workspace = true }
color-eyre = { workspace = true }


[dev-dependencies]
multisig = { workspace = true, features = ["testing"] }

pretty_assertions = { workspace = true }
tokio = { workspace = true }
