[package]
name = "molecule_ipnft"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
alloy = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
