[package]
name = "multisig"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []
testing = ["dep:mockall"]


[dependencies]
alloy = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }

mockall = { optional = true, workspace = true }


[dev-dependencies]
