[package]
name = "multisig_safe_wallet"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
alloy = { workspace = true }
multisig = { workspace = true }

async-trait = { workspace = true }
color-eyre = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
