[package]
name = "alloy_ext"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[features]
default = []


[dependencies]
alloy = { workspace = true }

async-trait = { workspace = true }
color-eyre = { workspace = true }


[dev-dependencies]
